Fix search bars on mobile

--- a/app/assets/stylesheets/external_main.css
+++ b/app/assets/stylesheets/external_main.css
@@ -8163,7 +8163,7 @@ div#manufacturer-search, #product-search{
         right: 0;
         border-radius: 0 30px 30px 0px;border: 0;
         display: inline-block;
-        padding-top: 8px;
+        padding-top: 9px;
         padding-bottom: 9px;
         padding-left: 35px;
         padding-right: 35px;
